@@ -27,44 +27,45 @@ import com.decathlon.ara.defect.jira.api.model.JiraIssue;
 import com.decathlon.ara.service.SettingProviderService;
 import com.decathlon.ara.service.dto.setting.SettingDTO;
 import com.decathlon.ara.service.exception.BadRequestException;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class JiraDefectAdapter implements DefectAdapter {
 
-    @Autowired
+    private static final Logger LOG = LoggerFactory.getLogger(JiraDefectAdapter.class);
+
     private SettingProviderService settingProviderService;
 
-    @Autowired
     private JiraRestClient jiraRestClient;
 
-    @Autowired
     private JiraMapper jiraMapper;
+
+    public JiraDefectAdapter(SettingProviderService settingProviderService, JiraRestClient jiraRestClient,
+            JiraMapper jiraMapper) {
+        this.settingProviderService = settingProviderService;
+        this.jiraRestClient = jiraRestClient;
+        this.jiraMapper = jiraMapper;
+    }
 
     @Override
     public List<Defect> getStatuses(long projectId, List<String> ids) throws FetchException {
         try {
             List<String> validJiraKeys = ids.stream()
-                    .filter(id -> isValidId(id))
-                    .collect(Collectors.toList());
+                    .filter(this::isValidId)
+                    .toList();
             List<JiraIssue> jiraIssues = jiraRestClient.getIssuesFromKeys(projectId, validJiraKeys);
-            List<Defect> defects = jiraMapper.toDefects(jiraIssues);
-            return defects;
+            return jiraMapper.toDefects(jiraIssues);
         } catch (BadRequestException e) {
             String jiraIds = String.join(", ", ids);
-            String errorMessage = String.format("Error while fetching the following ids from Jira: [%s]", jiraIds);
-            log.error(errorMessage, e);
+            String errorMessage = String.format("DEFECT|jira|Error while fetching the following ids from Jira: [%s]", jiraIds);
+            LOG.error(errorMessage, e);
             throw new FetchException(errorMessage, e);
         }
     }
@@ -73,13 +74,12 @@ public class JiraDefectAdapter implements DefectAdapter {
     public List<Defect> getChangedDefects(long projectId, Date startDate) throws FetchException {
         try {
             List<JiraIssue> jiraIssues = jiraRestClient.getUpdatedIssues(projectId, startDate);
-            List<Defect> defects = jiraMapper.toDefects(jiraIssues);
-            return defects;
+            return jiraMapper.toDefects(jiraIssues);
         } catch (BadRequestException e) {
             DateFormat dateFormat = new SimpleDateFormat("yyyy/MM/dd HH:mm:ss");
             String formattedDate = dateFormat.format(startDate);
-            String errorMessage = String.format("An error occurred while fetching the updated issues after %s", formattedDate);
-            log.error(errorMessage, e);
+            String errorMessage = String.format("DEFECT|jira|An error occurred while fetching the updated issues after %s", formattedDate);
+            LOG.warn(errorMessage, e);
             throw new FetchException(errorMessage, e);
         }
     }
