@@ -28,8 +28,9 @@ import com.decathlon.ara.service.SettingProviderService;
 import com.decathlon.ara.service.SettingService;
 import com.decathlon.ara.service.dto.setting.SettingDTO;
 import com.decathlon.ara.service.support.Settings;
-import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.ListUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.http.*;
@@ -57,11 +58,11 @@ import java.security.cert.X509Certificate;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 public class RtcDefectAdapter implements DefectAdapter {
+
+    private static final Logger LOG = LoggerFactory.getLogger(RtcDefectAdapter.class);
 
     private static final Pattern COOKIE_PATTERN = Pattern.compile("^([^=]*)=([^;]*)");
     private static final Pattern RTC_ID_PATTERN = Pattern.compile("[-]?[0-9]{1,10}");
@@ -75,9 +76,9 @@ public class RtcDefectAdapter implements DefectAdapter {
 
     @Autowired
     public RtcDefectAdapter(SettingService settingService,
-                            RestTemplateBuilder restTemplateBuilder,
-                            RtcDateTimeAdapter rtcDateTimeAdapter,
-                            SettingProviderService settingProviderService) {
+            RestTemplateBuilder restTemplateBuilder,
+            RtcDateTimeAdapter rtcDateTimeAdapter,
+            SettingProviderService settingProviderService) {
         this.settingService = settingService;
         this.rtcDateTimeAdapter = rtcDateTimeAdapter;
         this.settingProviderService = settingProviderService;
@@ -104,8 +105,8 @@ public class RtcDefectAdapter implements DefectAdapter {
         final Map<String, String> cookies = authenticate(projectId);
 
         List<String> realIds = ids.stream()
-                .filter(id -> isValidId(id))
-                .collect(Collectors.toList());
+                .filter(this::isValidId)
+                .toList();
         if (!realIds.isEmpty()) {
             final int batchSize = settingService.getInt(projectId, Settings.DEFECT_RTC_BATCH_SIZE);
             for (List<String> idsPartition : ListUtils.partition(realIds, batchSize)) {
@@ -153,7 +154,7 @@ public class RtcDefectAdapter implements DefectAdapter {
         }
         try {
             final Integer parsedId = Integer.valueOf(id);
-            log.trace("Parsed defect ID {} (logged for no 'Result of method not used' warning)", parsedId);
+            LOG.debug("DEFECT|rtc|Parsed defect ID {} (logged for no 'Result of method not used' warning)", parsedId);
             return true;
         } catch (NumberFormatException e) {
             return false;
@@ -205,7 +206,7 @@ public class RtcDefectAdapter implements DefectAdapter {
         final List<String> workItemTypes = settingService.getList(projectId, Settings.DEFECT_RTC_WORK_ITEM_TYPES);
         final String typeFilter = toFilter("type/id", workItemTypes.stream()
                 .map(t -> "'" + t.toLowerCase() + "'")
-                .collect(Collectors.toList()));
+                .toList());
         String fullFilters = "(" + typeFilter + ") and (" + filter + ")";
         final String fields = "work" + "item/workItem[" + fullFilters + "]/(id|state/name|resolutionDate)";
         final String rootUrl = settingService.get(projectId, Settings.DEFECT_RTC_ROOT_URL);
@@ -263,7 +264,7 @@ public class RtcDefectAdapter implements DefectAdapter {
                     final String nextPageUrl = URLDecoder.decode(rawNextPageUrl, StandardCharsets.UTF_8.name());
                     defects.addAll(queryDefects(projectId, cookies, nextPageUrl, requestedPageSize));
                 } catch (UnsupportedEncodingException e) {
-                    log.error("Ignoring URL of next page because it cannot be parsed: {}", url, e);
+                    LOG.warn("DEFECT|rtc|Ignoring URL of next page because it cannot be parsed: {}", url, e);
                 }
             }
         }
@@ -303,13 +304,13 @@ public class RtcDefectAdapter implements DefectAdapter {
 
         if (closedStates.stream().anyMatch(s -> s.equalsIgnoreCase(lowerState))) {
             if (openStates.contains(lowerState)) {
-                log.error("Work item status \"{}\" is configured both as OPEN and CLOSED: CLOSED have priority", state);
+                LOG.debug("DEFECT|rtc|Work item status \"{}\" is configured both as OPEN and CLOSED: CLOSED have priority", state);
             }
             return ProblemStatus.CLOSED;
         } else if (openStates.stream().anyMatch(s -> s.equalsIgnoreCase(lowerState))) {
             return ProblemStatus.OPEN;
         }
-        log.error("Work item status \"{}\" is not configured as OPEN nor as CLOSED: consider it OPEN", state);
+        LOG.debug("DEFECT|rtc|Work item status \"{}\" is not configured as OPEN nor as CLOSED: consider it OPEN", state);
         return ProblemStatus.OPEN;
     }
 
@@ -433,7 +434,7 @@ public class RtcDefectAdapter implements DefectAdapter {
                 try {
                     // Install the all-trusting trust manager
                     final SSLContext sslContext = SSLContext.getInstance("TLSv1.2");
-                    final var trustManagers = new SimpleTrustManager[]{new SimpleTrustManager()};
+                    final var trustManagers = new SimpleTrustManager[] { new SimpleTrustManager() };
                     sslContext.init(null, trustManagers, null);
                     HttpsURLConnection.setDefaultSSLSocketFactory(sslContext.getSocketFactory());
                     ((HttpsURLConnection) connection).setSSLSocketFactory(sslContext.getSocketFactory());
