@@ -25,7 +25,6 @@ import com.decathlon.ara.scenario.generic.bean.log.GenericExecutedScenarioLogs;
 import com.fasterxml.jackson.annotation.JsonFormat;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import lombok.Data;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.util.CollectionUtils;
 
@@ -36,7 +35,6 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-@Data
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class GenericExecutedScenarioReport {
 
@@ -49,7 +47,7 @@ public class GenericExecutedScenarioReport {
     private GenericExecutedScenarioDescription description;
 
     @JsonProperty("start")
-    @JsonFormat(pattern="yyyy-MM-dd'T'HH:mm:ss")
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
     private Date startDate;
 
     private boolean ignored;
@@ -132,13 +130,11 @@ public class GenericExecutedScenarioReport {
      */
     public List<String> getCountryCodes() {
         List<String> countryCodesFromTags = getCountryCodesFromTags(tags);
-        List<String> countryCodesFromFeatureTags = feature != null ?
-                getCountryCodesFromTags(feature.getTags()) :
-                new ArrayList<>();
+        List<String> countryCodesFromFeatureTags = feature != null ? getCountryCodesFromTags(feature.getTags()) : new ArrayList<>();
         return Stream.of(countryCodesFromTags, countryCodesFromFeatureTags)
                 .flatMap(Collection::stream)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -154,6 +150,62 @@ public class GenericExecutedScenarioReport {
                 .filter(tag -> tag.startsWith("country-"))
                 .map(tag -> tag.substring("country-".length()))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public String getCode() {
+        return code;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public GenericExecutedScenarioFeature getFeature() {
+        return feature;
+    }
+
+    public GenericExecutedScenarioDescription getDescription() {
+        return description;
+    }
+
+    public Date getStartDate() {
+        return startDate;
+    }
+
+    public boolean isIgnored() {
+        return ignored;
+    }
+
+    public List<GenericExecutedScenarioError> getErrors() {
+        return errors;
+    }
+
+    public List<Long> getCartography() {
+        return cartography;
+    }
+
+    public GenericExecutedScenarioResultsDisplay getDisplay() {
+        return display;
+    }
+
+    public GenericExecutedScenarioLogs getLogs() {
+        return logs;
+    }
+
+    public List<String> getTags() {
+        return tags;
+    }
+
+    public String getSeverity() {
+        return severity;
+    }
+
+    public String getServerName() {
+        return serverName;
+    }
+
+    public String getComment() {
+        return comment;
     }
 }
