@@ -28,10 +28,8 @@ import com.decathlon.ara.service.FileProcessorService;
 import com.decathlon.ara.service.TechnologySettingService;
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonParser;
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
@@ -40,24 +38,27 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
-@Slf4j
 public class PostmanScenariosIndexer implements ScenariosIndexer {
 
-    @NonNull
+    private static final Logger LOG = LoggerFactory.getLogger(PostmanScenariosIndexer.class);
+
     private final PostmanService postmanService;
 
-    @NonNull
     private final JsonFactory jsonFactory;
 
-    @NonNull
     private final TechnologySettingService technologySettingService;
 
-    @NonNull
     private final FileProcessorService fileProcessorService;
+
+    public PostmanScenariosIndexer(PostmanService postmanService, JsonFactory jsonFactory,
+            TechnologySettingService technologySettingService, FileProcessorService fileProcessorService) {
+        this.postmanService = postmanService;
+        this.jsonFactory = jsonFactory;
+        this.technologySettingService = technologySettingService;
+        this.fileProcessorService = fileProcessorService;
+    }
 
     /**
      * Get the Postman executed scenarios
@@ -72,12 +73,12 @@ public class PostmanScenariosIndexer implements ScenariosIndexer {
         String postmanReportFolderName = technologySettingService.getSettingValue(projectId, PostmanSettings.REPORTS_PATH).orElse("");
         List<File> postmanReports = getNewmanReportFiles(postmanFolder, postmanReportFolderName);
         String resultFileName = technologySettingService.getSettingValue(projectId, PostmanSettings.RESULT_FILE_NAME).orElse("").toLowerCase();
-        Boolean containsResult = postmanReports.stream()
+        boolean containsResult = postmanReports.stream()
                 .anyMatch(file -> resultFileName.equals(file.getName().toLowerCase()));
         if (containsResult) {
             List<File> postmanReportsWithoutResultFile = postmanReports.stream()
                     .filter(file -> !resultFileName.equals(file.getName().toLowerCase()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             AtomicInteger requestPosition = new AtomicInteger(0);
 
@@ -88,7 +89,7 @@ public class PostmanScenariosIndexer implements ScenariosIndexer {
                     try (InputStream input = new FileInputStream(postmanReportFile); JsonParser parser = jsonFactory.createParser(input)) {
                         consumer.accept(parser);
                     } catch (IOException e) {
-                        log.error("Error while handling the postman report file {}", postmanReportFile.getPath(), e);
+                        LOG.error("Error while handling the postman report file {}", postmanReportFile.getPath(), e);
                         return new ArrayList<>();
                     }
                     List<ExecutedScenario> currentFileExecutedScenarios = postmanService.postProcess(run, newmanParsingResult, postmanReportFile.getName(), requestPosition);
@@ -100,7 +101,7 @@ public class PostmanScenariosIndexer implements ScenariosIndexer {
         }
         return allExecutedScenarios.stream()
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
