@@ -24,15 +24,14 @@ import com.decathlon.ara.domain.enumeration.Technology;
 import com.decathlon.ara.repository.TechnologySettingRepository;
 import com.decathlon.ara.scenario.common.settings.AvailableTechnologySettings;
 import com.decathlon.ara.service.dto.setting.SettingDTO;
+import com.decathlon.ara.service.dto.setting.SettingDTO.SettingDTOBuilder;
 import com.decathlon.ara.service.dto.setting.TechnologySettingGroupDTO;
 import com.decathlon.ara.service.exception.BadRequestException;
 import com.decathlon.ara.service.exception.NotFoundException;
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.WordUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -41,19 +40,22 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @Transactional
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class TechnologySettingService {
 
-    @NonNull
+    private static final Logger LOG = LoggerFactory.getLogger(TechnologySettingService.class);
+
     private final TechnologySettingRepository technologySettingRepository;
 
-    @NonNull
     private final SettingService settingService;
+
+    public TechnologySettingService(TechnologySettingRepository technologySettingRepository,
+            SettingService settingService) {
+        this.technologySettingRepository = technologySettingRepository;
+        this.settingService = settingService;
+    }
 
     /**
      * Get all the available technology setting groups.
@@ -83,18 +85,16 @@ public class TechnologySettingService {
      */
     private List<TechnologySettingGroupDTO> getTechnologySettingGroupDefinition() {
         List<Technology> availableTechnologies = Arrays.asList(Technology.values());
-        List<TechnologySettingGroupDTO> groups = availableTechnologies.stream()
+        return availableTechnologies.stream()
                 .map(technology -> Pair.of(technology, getAvailableTechnologySettings(technology)))
-                .map(pair ->
-                        Pair.of(
-                                pair.getFirst(),
-                                pair.getSecond()
-                                        .stream()
-                                        .map(this::getSettingDTOFromAvailableTechnologySetting)
-                                        .collect(Collectors.toList())))
+                .map(pair -> Pair.of(
+                        pair.getFirst(),
+                        pair.getSecond()
+                                .stream()
+                                .map(this::getSettingDTOFromAvailableTechnologySetting)
+                                .toList()))
                 .map(this::getTechnologySettingGroup)
-                .collect(Collectors.toList());
-        return groups;
+                .toList();
     }
 
     /**
@@ -114,9 +114,9 @@ public class TechnologySettingService {
                 return Arrays.asList(availableSettings);
             }
         } catch (ClassNotFoundException e) {
-            log.error("The class {} was not found", enumName, e);
+            LOG.warn("SETTING|technology|The class {} was not found", enumName, e);
         } catch (ClassCastException e) {
-            log.error("The class {} should be an instance of {}", enumName, AvailableTechnologySettings.class.getName(), e);
+            LOG.warn("SETTING|technology|The class {} should be an instance of {}", enumName, AvailableTechnologySettings.class.getName(), e);
         }
         return availableTechnologySettings;
     }
@@ -132,8 +132,7 @@ public class TechnologySettingService {
         String technologyName = technology.toString();
         String packageName = String.format("com.decathlon.ara.scenario.%s.settings", technologyName.toLowerCase());
         String className = String.format("%sSettings", WordUtils.capitalizeFully(technologyName));
-        String fullClassName = String.format("%s.%s", packageName, className);
-        return fullClassName;
+        return String.format("%s.%s", packageName, className);
     }
 
     /**
@@ -143,14 +142,14 @@ public class TechnologySettingService {
      */
     private SettingDTO getSettingDTOFromAvailableTechnologySetting(AvailableTechnologySettings availableSetting) {
         String defaultValue = availableSetting.getDefaultValue();
-        return new SettingDTO()
+        return new SettingDTOBuilder()
                 .withCode(availableSetting.getCode())
                 .withName(availableSetting.getName())
                 .withHelp(availableSetting.getHelp())
                 .withType(availableSetting.getType())
                 .withDefaultValue(defaultValue)
                 .withRequired(availableSetting.isRequired())
-                .withValue(defaultValue);
+                .withValue(defaultValue).build();
     }
 
     /**
@@ -162,10 +161,7 @@ public class TechnologySettingService {
         Technology technology = pair.getFirst();
         String groupName = WordUtils.capitalizeFully(technology.toString());
         List<SettingDTO> settings = pair.getSecond();
-        TechnologySettingGroupDTO group = new TechnologySettingGroupDTO(technology);
-        group.setName(groupName);
-        group.setSettings(settings);
-        return group;
+        return new TechnologySettingGroupDTO(groupName, settings, technology);
     }
 
     /**
@@ -222,11 +218,9 @@ public class TechnologySettingService {
             return Optional.empty();
         }
 
-        Optional<SettingDTO> matchingSetting = technologyGroup.get().getSettings().stream()
+        return technologyGroup.get().getSettings().stream()
                 .filter(setting -> setting.getCode().equals(code))
                 .findFirst();
-
-        return matchingSetting;
     }
 
     /**
@@ -247,11 +241,7 @@ public class TechnologySettingService {
 
         TechnologySetting settingToSave = technologySettingRepository.findByProjectIdAndCodeAndTechnology(projectId, code, technology)
                 .orElse(
-                        new TechnologySetting()
-                                .withProjectId(projectId)
-                                .withCode(code)
-                                .withTechnology(technology)
-                );
+                        new TechnologySetting(projectId, code, technology));
         settingToSave.setValue(newValue);
         technologySettingRepository.save(settingToSave);
     }
