@@ -24,21 +24,11 @@ import com.decathlon.ara.service.dto.feature.FeatureDTO;
 import com.decathlon.ara.service.exception.NotFoundException;
 import com.decathlon.ara.web.rest.util.ResponseUtil;
 import com.decathlon.ara.web.rest.util.RestConstants;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
 
 /**
  * This REST resource will handle the Feature flipping of ARA, to enable or disable experimental features.
@@ -50,7 +40,6 @@ import org.springframework.web.bind.annotation.RestController;
  */
 @RestController
 @RequestMapping(FeatureResource.PATH)
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class FeatureResource {
 
     private static final String NAME = Entities.FEATURE;
@@ -59,8 +48,11 @@ public class FeatureResource {
      */
     static final String PATH = RestConstants.API_PATH + "/" + NAME + "s";
 
-    @NonNull
     private FeatureService featureService;
+
+    public FeatureResource(FeatureService featureService) {
+        this.featureService = featureService;
+    }
 
     /**
      * List will return all the features available with their current state.
@@ -122,6 +114,7 @@ public class FeatureResource {
             return ResponseUtil.handle(ex);
         }
     }
+
     /**
      * Update the given list of features to the new state.
      *
@@ -144,7 +137,7 @@ public class FeatureResource {
         }
         List<FeatureDTO> updatedList = this.featureService.retrieveStateOf(featuresToUpdate.stream()
                 .map(FeatureDTO::getCode)
-                .collect(Collectors.toList()));
+                .toList());
         return ResponseEntity.ok(updatedList);
     }
 
